--- a/res/layout/reim_edit.xml
+++ b/res/layout/reim_edit.xml
@@ -55,7 +55,9 @@
 	        <RelativeLayout
 	            android:layout_width="match_parent"
 	            android:layout_height="0dp"
-	            android:layout_weight="0.13" >
+	            android:layout_weight="0.13"
+	            android:focusable="true"
+	            android:focusableInTouchMode="true" >
 	
 	            <EditText
 	                android:id="@+id/amountEditText"
