--- a/res/layout/reim_show.xml
+++ b/res/layout/reim_show.xml
@@ -103,8 +103,8 @@
 	            <TextView
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
 	                android:layout_alignParentLeft="true"
+	                android:layout_marginTop="19dp"
 	                android:layout_marginLeft="16dp"
 	                android:text="@string/type"
 	                android:textColor="@color/hint_grey"
@@ -146,8 +146,8 @@
 	            <TextView
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
 	                android:layout_alignParentLeft="true"
+	                android:layout_marginTop="19dp"
 	                android:layout_marginLeft="16dp"
 	                android:text="@string/photo"
 	                android:textColor="@color/hint_grey"
@@ -178,8 +178,8 @@
 	            <TextView
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
 	                android:layout_alignParentLeft="true"
+	                android:layout_marginTop="19dp"
 	                android:layout_marginLeft="16dp"
 	                android:text="@string/time"
 	                android:textColor="@color/hint_grey"
@@ -191,7 +191,7 @@
 	                android:layout_height="wrap_content"
 	                android:layout_centerVertical="true"
 	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="10dp"
+	                android:layout_marginRight="16dp"
 	                android:textColor="@color/font_major_dark"
 	                android:textSize="18sp" />
 	
@@ -210,8 +210,8 @@
 	            <TextView
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
 	                android:layout_alignParentLeft="true"
+	                android:layout_marginTop="19dp"
 	                android:layout_marginLeft="16dp"
 	                android:text="@string/vendor"
 	                android:textColor="@color/hint_grey"
@@ -223,7 +223,7 @@
 	                android:layout_height="wrap_content"
 	                android:layout_centerVertical="true"
 	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="10dp"
+	                android:layout_marginRight="16dp"
 	                android:textColor="@color/font_major_dark"
 	                android:textSize="18sp" />
 	
@@ -242,8 +242,8 @@
 	            <TextView
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
 	                android:layout_alignParentLeft="true"
+	                android:layout_marginTop="19dp"
 	                android:layout_marginLeft="16dp"
 	                android:text="@string/location"
 	                android:textColor="@color/hint_grey"
@@ -255,7 +255,7 @@
 	                android:layout_height="wrap_content"
 	                android:layout_centerVertical="true"
 	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="10dp"
+	                android:layout_marginRight="16dp"
 	                android:textColor="@color/font_major_dark"
 	                android:textSize="18sp" />
 	
@@ -274,20 +274,32 @@
 	            <TextView
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
 	                android:layout_alignParentLeft="true"
+	                android:layout_marginTop="19dp"
 	                android:layout_marginLeft="16dp"
 	                android:text="@string/category"
 	                android:textColor="@color/hint_grey"
 	                android:textSize="14sp" />
+
+			    <ImageView
+			        android:id="@+id/categoryImageView"
+			        android:layout_width="30dp"
+			        android:layout_height="30dp"
+			        android:layout_centerVertical="true"
+			        android:layout_alignParentLeft="true"
+	                android:layout_marginLeft="80dp"
+			        android:contentDescription="@string/icon"
+			        android:src="@drawable/default_icon" />
 
 	            <TextView
 	                android:id="@+id/categoryTextView"
 	                android:layout_width="match_parent"
 	                android:layout_height="wrap_content"
 	                android:layout_centerVertical="true"
-	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="10dp"
+	                android:layout_toRightOf="@+id/categoryImageView"
+	                android:layout_marginLeft="10dp"
+	                android:layout_marginRight="16dp"
+	                android:text="@string/notAvailable"
 	                android:textColor="@color/font_major_dark"
 	                android:textSize="18sp" />
 	
@@ -301,28 +313,29 @@
 	
 	        <RelativeLayout
 	            android:layout_width="match_parent"
-	            android:layout_height="56dp" >
+	            android:layout_height="wrap_content" >
 
 	            <TextView
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
 	                android:layout_alignParentLeft="true"
+	                android:layout_marginTop="19dp"
 	                android:layout_marginLeft="16dp"
 	                android:text="@string/tag"
 	                android:textColor="@color/hint_grey"
 	                android:textSize="14sp" />
 
-	            <TextView
-	                android:id="@+id/tagTextView"
+	            <RelativeLayout
+	                android:id="@+id/tagLayout"
 	                android:layout_width="match_parent"
 	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
+	            	android:minHeight="56dp"
+	                android:layout_alignParentTop="true"
+	                android:paddingTop="18dp"
+	                android:paddingBottom="18dp"
 	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="10dp"
-	                android:textColor="@color/font_major_dark"
-	                android:textSize="18sp" />
-	
+	                android:layout_marginRight="16dp" >
+	            </RelativeLayout>
 	        </RelativeLayout>
             
 		    <include                 
@@ -338,8 +351,8 @@
 	            <TextView
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
 	                android:layout_alignParentLeft="true"
+	                android:layout_marginTop="20dp"
 	                android:layout_marginLeft="16dp"
 	                android:text="@string/member"
 	                android:textColor="@color/hint_grey"
@@ -351,7 +364,7 @@
 	                android:layout_height="wrap_content"
 	                android:layout_centerVertical="true"
 	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="10dp"
+	                android:layout_marginRight="16dp"
 	                android:textColor="@color/font_major_dark"
 	                android:textSize="18sp" />
 	
@@ -365,13 +378,13 @@
 	
 	        <RelativeLayout
 	            android:layout_width="match_parent"
-	            android:layout_height="56dp" >
+	            android:layout_height="wrap_content" >
 
 	            <TextView
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
 	                android:layout_alignParentLeft="true"
+	                android:layout_marginTop="19dp"
 	                android:layout_marginLeft="16dp"
 	                android:text="@string/note"
 	                android:textColor="@color/hint_grey"
@@ -382,8 +395,10 @@
 	                android:layout_width="match_parent"
 	                android:layout_height="wrap_content"
 	                android:layout_centerVertical="true"
+	                android:layout_marginTop="16dp"
+	                android:layout_marginBottom="16dp"
 	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="10dp"
+	                android:layout_marginRight="16dp"
 	                android:textColor="@color/font_major_dark"
 	                android:textSize="18sp" />
 	
