--- a/res/layout/reim_filter.xml
+++ b/res/layout/reim_filter.xml
@@ -3,134 +3,229 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <Button
-        android:id="@+id/confirmButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="@string/confirm" />
+        android:contentDescription="@string/background"
+        android:src="@drawable/filter_background"
+        android:scaleType="fitXY" />
 
-    <Button
-        android:id="@+id/cancelButton"
+    <ImageView
+        android:id="@+id/confirmImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="@string/cancel" />
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="16dp"
+        android:contentDescription="@string/confirm"
+		android:src="@drawable/confirm" />
+
+    <ImageView
+        android:id="@+id/cancelImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="16dp"
+        android:contentDescription="@string/cancel"
+		android:src="@drawable/cancel" />
 
     <TextView
         android:id="@+id/sortTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/confirmButton" 
-        android:text="@string/sort" />
+        android:layout_alignBottom="@+id/sortDivider"
+        android:layout_marginBottom="6dp"
+        android:layout_marginLeft="16dp"
+        android:text="@string/sort"
+        android:textColor="@color/hint_light_grey"
+        android:textSize="14sp" />
 
-    <RadioGroup
+    <include 
+        android:id="@+id/sortDivider"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="124dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        layout="@layout/divider"/>
+    
+    <classes.Widget.SegmentedGroup
         android:id="@+id/sortRadioGroup"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/sortTextView" >
+		android:layout_centerHorizontal="true"
+        android:layout_below="@+id/sortDivider"
+        android:layout_marginTop="22dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+    	android:orientation="horizontal" >
 
         <RadioButton
             android:id="@+id/sortNullRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:checked="true"
-            android:text="@string/sortNull" />
+            android:text="@string/sortNull"
+            style="@style/RadioButton" />
 
         <RadioButton
             android:id="@+id/sortAmountRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sortAmount" />
+            android:layout_weight="1"
+            android:text="@string/sortItemsCount"
+            style="@style/RadioButton" />
 
         <RadioButton
             android:id="@+id/sortConsumedDateRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sortConsumedDate" />
-    </RadioGroup>
+            android:layout_weight="1"
+            android:text="@string/sortAmount"
+            style="@style/RadioButton" />
+        
+    </classes.Widget.SegmentedGroup>
 
     <TextView
         android:id="@+id/filterTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/sortRadioGroup"
-        android:text="@string/filter" />
+        android:layout_alignBottom="@+id/filterDivider"
+        android:layout_marginBottom="6dp"
+        android:layout_marginLeft="16dp"
+        android:text="@string/filter"
+        android:textColor="@color/hint_light_grey"
+        android:textSize="14sp" />
 
-    <RadioGroup
+    <include 
+        android:id="@+id/filterDivider"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+		android:layout_alignTop="@+id/sortDivider"
+        android:layout_marginTop="108dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        layout="@layout/divider"/>
+    
+    <classes.Widget.SegmentedGroup
         android:id="@+id/filterTypeRadioGroup"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/filterTextView" >
+		android:layout_centerHorizontal="true"
+        android:layout_below="@+id/filterDivider"
+        android:layout_marginTop="22dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+    	android:orientation="horizontal" >
 
         <RadioButton
             android:id="@+id/filterTypeAllRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:checked="true"
-            android:text="@string/filterAll" />
+            android:text="@string/filterAll"
+            style="@style/RadioButton" />
 
         <RadioButton
             android:id="@+id/filterProveAheadRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/filterProveAhead" />
+            android:layout_weight="1"
+            android:text="@string/filterProveAhead"
+            style="@style/RadioButton" />
 
         <RadioButton
             android:id="@+id/filterConsumedRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/filterConsumed" />
-    </RadioGroup>
-
-    <RadioGroup
+            android:layout_weight="1"
+            android:text="@string/filterConsumed"
+            style="@style/RadioButton" />
+        
+    </classes.Widget.SegmentedGroup>
+    
+    <classes.Widget.SegmentedGroup
         android:id="@+id/filterStatusRadioGroup"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/filterTextView"
-        android:layout_toRightOf="@+id/sortRadioGroup" >
+		android:layout_centerHorizontal="true"
+        android:layout_below="@+id/filterTypeRadioGroup"
+        android:layout_marginTop="28dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+    	android:orientation="horizontal" >
 
         <RadioButton
             android:id="@+id/filterStatusAllRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:checked="true"
-            android:text="@string/filterAll" />
+            android:text="@string/filterAll"
+            style="@style/RadioButton" />
 
         <RadioButton
             android:id="@+id/filterAddedRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/filterAdded" />
+            android:layout_weight="0.5"
+            android:text="@string/filterAdded"
+            style="@style/RadioButton" />
 
         <RadioButton
             android:id="@+id/filterFreeRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/filterFree" />
-    </RadioGroup>
+            android:layout_weight="0.5"
+            android:text="@string/filterFree"
+            style="@style/RadioButton" />
+        
+    </classes.Widget.SegmentedGroup>
 
     <TextView
         android:id="@+id/tagTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/filterTypeRadioGroup"
-        android:text="@string/filterTags" />
+        android:layout_alignBottom="@+id/tagDivider"
+        android:layout_marginBottom="6dp"
+        android:layout_marginLeft="16dp"
+        android:text="@string/filterTags"
+        android:textColor="@color/hint_light_grey"
+        android:textSize="14sp" />
+
+    <include 
+        android:id="@+id/tagDivider"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+		android:layout_below="@+id/filterStatusRadioGroup"
+        android:layout_marginTop="58dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        layout="@layout/divider"/>
 
     <GridView
         android:id="@+id/tagGridView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/tagTextView"
-        android:numColumns="4" >
-
-    </GridView>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tagDivider"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:listSelector="@android:color/transparent"
+        android:numColumns="4"
+        android:verticalSpacing="22dp"
+        android:horizontalSpacing="16dp" />
 
 </RelativeLayout>
