--- a/res/layout/reim_show.xml
+++ b/res/layout/reim_show.xml
@@ -325,49 +325,18 @@
 	                android:textColor="@color/hint_grey"
 	                android:textSize="14sp" />
 
-	            <RelativeLayout
+	            <LinearLayout
 	                android:id="@+id/tagLayout"
 	                android:layout_width="match_parent"
 	                android:layout_height="wrap_content"
 	            	android:minHeight="56dp"
+	            	android:orientation="vertical"
 	                android:layout_alignParentTop="true"
-	                android:paddingTop="18dp"
 	                android:paddingBottom="18dp"
 	                android:layout_marginLeft="80dp"
 	                android:layout_marginRight="16dp" >
-	            </RelativeLayout>
-	        </RelativeLayout>
-            
-		    <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-				android:layout_marginLeft="80dp"
-			  	layout="@layout/divider"/>
-	
-	        <RelativeLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="56dp" >
-
-	            <TextView
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_alignParentLeft="true"
-	                android:layout_marginTop="20dp"
-	                android:layout_marginLeft="16dp"
-	                android:text="@string/member"
-	                android:textColor="@color/hint_grey"
-	                android:textSize="14sp" />
-
-	            <TextView
-	                android:id="@+id/memberTextView"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
-	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="16dp"
-	                android:textColor="@color/font_major_dark"
-	                android:textSize="18sp" />
-	
+	            </LinearLayout>
+	            
 	        </RelativeLayout>
             
 		    <include                 
@@ -379,6 +348,41 @@
 	        <RelativeLayout
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content" >
+
+	            <TextView
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_alignParentLeft="true"
+	                android:layout_marginTop="19dp"
+	                android:layout_marginLeft="16dp"
+	                android:text="@string/member"
+	                android:textColor="@color/hint_grey"
+	                android:textSize="14sp" />
+
+	            <LinearLayout
+	                android:id="@+id/memberLayout"
+	                android:layout_width="match_parent"
+	                android:layout_height="wrap_content"
+	            	android:minHeight="56dp"
+	            	android:orientation="vertical"
+	                android:layout_alignParentTop="true"
+	                android:paddingBottom="18dp"
+	                android:layout_marginLeft="80dp"
+	                android:layout_marginRight="16dp" >
+	            </LinearLayout>
+	
+	        </RelativeLayout>
+            
+		    <include                 
+				android:layout_width="match_parent"
+				android:layout_height="0.5dp"
+				android:layout_marginLeft="80dp"
+			  	layout="@layout/divider"/>
+	
+	        <RelativeLayout
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:minHeight="56dp" >
 
 	            <TextView
 	                android:layout_width="wrap_content"
