--- a/res/layout/reim_type_window.xml
+++ b/res/layout/reim_type_window.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="170dp"
     android:orientation="vertical"
-    android:background="@color/background" >
+    android:background="@color/background"
+	android:id="@+id/typeLayout" >
     
     <RelativeLayout
 	    android:layout_width="match_parent"
@@ -45,7 +46,7 @@
 	            style="@style/RadioButton" />
 	
 	        <RadioButton
-	            android:id="@+id/proveAheadCountRadio"
+	            android:id="@+id/proveAheadRadio"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:text="@string/proveAhead"
