--- a/res/layout/reim_type_window.xml
+++ b/res/layout/reim_type_window.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="170dp"
+    android:layout_height="169.5dp"
     android:orientation="vertical"
-    android:background="@color/background"
-	android:id="@+id/typeLayout" >
+    android:background="@color/background" >
     
     <RelativeLayout
 	    android:layout_width="match_parent"
@@ -103,12 +102,7 @@
 	    android:gravity="center"
 	    android:background="@drawable/popup_drawable"
 	    android:text="@string/confirm"
-	    android:textColor="@color/popup_text_color" 
-	    android:textSize="18sp" />	
-            
-	<include                 
-		android:layout_width="match_parent"
-		android:layout_height="0.5dp"
-	  	layout="@layout/divider"/>
+	    android:textColor="@color/button_text_dark" 
+	    android:textSize="18sp" />
 
 </LinearLayout>
