--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,6 +3,8 @@
     
     <color name="background">#FFF5F6F8</color>
     
+    <color name="divider">#1A000000</color>
+    
     <color name="font_major_dark">#FF373737</color>
     <color name="font_minor_dark">#FF333333</color>
     <color name="font_major_light">#CCFFFFFF</color>
@@ -24,7 +26,6 @@
     <color name="button_text_dark">#FFFF898C</color>
     <color name="button_text_light">#FFFFFFFF</color>
     
-    <color name="list_divider">#1A000000</color>
     <color name="list_item_selected">#FFFBE2E3</color>
     <color name="list_item_unselected">#00000000</color>
     
