--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -27,9 +27,9 @@
         <item name="android:paddingRight">5dp</item>
     </style>
     
-    <style name="TypeWindowAnimation" parent="android:Animation" mce_bogus="1">
-        <item name="android:windowEnterAnimation">@anim/type_window_in</item>  
-        <item name="android:windowExitAnimation">@anim/type_window_out</item>
+    <style name="WindowAnimation" parent="android:Animation" mce_bogus="1">
+        <item name="android:windowEnterAnimation">@anim/window_in</item>  
+        <item name="android:windowExitAnimation">@anim/window_out</item>
     </style>
 
 </resources>
