--- a/res/layout/me_change_password.xml
+++ b/res/layout/me_change_password.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/changePassword"
+            android:text="@string/change_password"
             android:textColor="@color/major_light"
             android:textSize="20sp" />
 
@@ -50,7 +50,7 @@
         android:layout_below="@+id/titleLayout"
         android:layout_marginTop="69dp"
         android:ems="10"
-        android:hint="@string/inputOldPassword"
+        android:hint="@string/input_password"
         android:inputType="textPassword" />
 
     <EditText
@@ -62,7 +62,7 @@
         android:layout_below="@+id/oldPasswordEditText"
         android:layout_marginTop="40dp"
         android:ems="10"
-        android:hint="@string/inputNewPassword"
+        android:hint="@string/input_new_password"
         android:inputType="textPassword" />
 
     <EditText
@@ -74,7 +74,7 @@
         android:layout_below="@+id/newPasswordEditText"
         android:layout_marginTop="35dp"
         android:ems="10"
-        android:hint="@string/confirmNewPasswordPrompt"
+        android:hint="@string/input_confirm_password"
         android:inputType="textPassword" >
 
         <requestFocus />
