--- a/res/layout/me_default_manager.xml
+++ b/res/layout/me_default_manager.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/defaultManager"
+            android:text="@string/default_manager"
             android:textSize="20sp"
             android:textColor="@color/major_light" />
 
