--- a/res/layout/me_invite_dialog.xml
+++ b/res/layout/me_invite_dialog.xml
@@ -13,6 +13,6 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:hint="@string/inputUserContact" />
+        android:hint="@string/input_user_contact" />
 
 </RelativeLayout>
