--- a/res/layout/me_invite_list.xml
+++ b/res/layout/me_invite_list.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/myInvites"
+            android:text="@string/my_invites"
             android:textColor="@color/major_light"
             android:textSize="20sp" />
     </RelativeLayout>
@@ -43,6 +43,6 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/titleLayout"
         android:gravity="center"
-        android:text="@string/noInvites" />
+        android:text="@string/no_invites" />
 
 </RelativeLayout>
