--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
 				android:layout_alignTop="@+id/tabItemReport"
 				android:layout_alignRight="@+id/tabItemReport"
 				android:gravity="center"
-				android:text="@string/reportOverFlow"
+				android:text="@string/report_over_flow"
 				android:textColor="@android:color/white"
 				android:background="@drawable/badge_long"
 				android:visibility="gone" />
@@ -139,7 +139,7 @@
 				android:layout_alignRight="@+id/tabItemMe"
 				android:layout_marginTop="3dp"
 				android:layout_marginRight="12dp"
-				android:contentDescription="@string/nullString"
+				android:contentDescription="@string/tip"
 				android:background="@drawable/tip"
 				android:visibility="gone" />
 
