--- a/res/layout/list_current_location.xml
+++ b/res/layout/list_current_location.xml
@@ -11,7 +11,7 @@
 		android:layout_height="wrap_content"
 		android:layout_centerVertical="true"
 		android:layout_marginLeft="16dp"
-		android:text="@string/currentLocation"
+		android:text="@string/current_location"
 		android:textColor="@color/major_dark"
 		android:textSize="16sp" />
 
