--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -44,6 +44,7 @@
                 android:textSize="16sp" />
 
         </LinearLayout>
+        
     </RelativeLayout>
 
     <View
@@ -113,7 +114,7 @@
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:contentDescription="@string/tag"
-            android:src="@drawable/category_logo" />
+            android:src="@drawable/default_icon" />
 
     </LinearLayout>
 
