--- a/res/layout/me_about.xml
+++ b/res/layout/me_about.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/aboutUs"
+            android:text="@string/about_us"
             android:textSize="20sp"
             android:textColor="@color/major_light" />
 
@@ -54,7 +54,7 @@
 	        android:layout_below="@+id/appNameTextView"
 	        android:layout_centerHorizontal="true"
 	        android:layout_marginTop="14dp"
-	        android:text="@string/currentVersion" />
+	        android:text="@string/current_version" />
 
 	    <TextView
 	        android:id="@+id/contentTextView"
@@ -63,7 +63,7 @@
 	        android:layout_below="@+id/currentVersionTextView"
 	        android:layout_centerHorizontal="true"
 	        android:layout_marginTop="24dp"
-	        android:text="@string/aboutContent"
+	        android:text="@string/about_content"
 	        android:textSize="20sp" />
 	
 	</RelativeLayout>
