--- a/res/layout/me_invited.xml
+++ b/res/layout/me_invited.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/myInvites"
+            android:text="@string/my_invites"
             android:textColor="@color/major_light"
             android:textSize="20sp" />
     </RelativeLayout>
