--- a/res/layout/me_invoice_title.xml
+++ b/res/layout/me_invoice_title.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/getInvoice"
+        android:text="@string/get_invoice"
         android:textSize="50sp" 
 		android:rotation="90" />
 
@@ -23,6 +23,6 @@
         android:layout_marginTop="60dp"
         android:layout_marginRight="-20dp"
         android:rotation="90"
-        android:text="@string/getInvoicePrompt" />
+        android:text="@string/get_invoice_prompt" />
 
 </RelativeLayout>
