--- a/res/layout/me_settings.xml
+++ b/res/layout/me_settings.xml
@@ -59,7 +59,7 @@
 				    android:layout_centerVertical="true"
 				    android:layout_alignParentLeft="true"
 				    android:layout_marginLeft="16dp"
-				    android:text="@string/aboutUs"
+				    android:text="@string/about_us"
 				    android:textSize="16sp"
 				    android:textColor="@color/font_major_dark" />
 				
@@ -109,7 +109,7 @@
 			        android:layout_marginLeft="10dp"
 			        android:layout_marginRight="10dp"
 			        android:background="@drawable/button_long_dark_drawable"
-			        android:text="@string/signOut"
+			        android:text="@string/sign_out"
 			        android:textColor="@color/button_text_light_color" />
             
 		        <include                 
