--- a/res/layout/reim_edit.xml
+++ b/res/layout/reim_edit.xml
@@ -65,7 +65,7 @@
 	                android:layout_height="wrap_content"
 	                android:layout_marginTop="8dp"
 	                android:layout_marginLeft="16dp"
-	                android:text="@string/actualCost"
+	                android:text="@string/actual_cost"
 	                android:textColor="@color/major_dark"
 	                android:textSize="14sp" />
 
@@ -429,7 +429,7 @@
 	                android:layout_marginLeft="80dp"
 	                android:layout_marginRight="16dp"
 	                android:background="@null"
-	            	android:hint="@string/inputNote"
+	            	android:hint="@string/input_note"
 	                android:textColor="@color/font_major_dark"
 	                android:textSize="18sp" />
 	
