--- a/res/layout/reim_filter.xml
+++ b/res/layout/reim_filter.xml
@@ -73,7 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:checked="true"
-            android:text="@string/sortNull"
+            android:text="@string/sort_null"
             style="@style/RadioButton" />
 
         <RadioButton
@@ -81,7 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/sortItemsCount"
+            android:text="@string/sort_item_count"
             style="@style/RadioButton" />
 
         <RadioButton
@@ -89,7 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/sortAmount"
+            android:text="@string/sort_amount"
             style="@style/RadioButton" />
         
     </classes.Widget.SegmentedGroup>
@@ -133,7 +133,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:checked="true"
-            android:text="@string/filterAll"
+            android:text="@string/filter_all"
             style="@style/RadioButton" />
 
         <RadioButton
@@ -141,7 +141,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/filterProveAhead"
+            android:text="@string/filter_prove_ahead"
             style="@style/RadioButton" />
 
         <RadioButton
@@ -149,7 +149,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/filterConsumed"
+            android:text="@string/filter_consumed"
             style="@style/RadioButton" />
         
     </classes.Widget.SegmentedGroup>
@@ -171,7 +171,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:checked="true"
-            android:text="@string/filterAll"
+            android:text="@string/filter_all"
             style="@style/RadioButton" />
 
         <RadioButton
@@ -179,7 +179,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:text="@string/filterAdded"
+            android:text="@string/filter_added"
             style="@style/RadioButton" />
 
         <RadioButton
@@ -187,7 +187,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:text="@string/filterFree"
+            android:text="@string/filter_free"
             style="@style/RadioButton" />
         
     </classes.Widget.SegmentedGroup>
@@ -200,7 +200,7 @@
         android:layout_alignBottom="@+id/tagDivider"
         android:layout_marginBottom="6dp"
         android:layout_marginLeft="16dp"
-        android:text="@string/filterTags"
+        android:text="@string/filter_tags"
         android:textColor="@color/hint_light_grey"
         android:textSize="14sp" />
 
