--- a/res/layout/report_comment.xml
+++ b/res/layout/report_comment.xml
@@ -15,6 +15,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/noComment" />
+        android:text="@string/no_comment" />
 
 </RelativeLayout>
