--- a/res/layout/report_comment_dialog.xml
+++ b/res/layout/report_comment_dialog.xml
@@ -13,6 +13,6 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:hint="@string/inputComment" />
+        android:hint="@string/input_comment" />
 
 </RelativeLayout>
