--- a/res/layout/report_edit.xml
+++ b/res/layout/report_edit.xml
@@ -1,27 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
 	android:focusable="true"
 	android:focusableInTouchMode="true" >
 
-    <EditText
-        android:id="@+id/titleEditText"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:singleLine="true"
-        android:hint="@string/inputReportTitle" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/major_dark" >
+
+        <ImageView
+            android:id="@+id/backImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:contentDescription="@string/back"
+            android:src="@drawable/back" />
+
+        <TextView
+            android:id="@+id/titleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/report_detail"
+            android:textColor="@color/major_light"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/saveTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="16dp"
+            android:text="@string/save"
+            android:textSize="16sp"
+            android:textColor="@color/major_light" />
+
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/commentLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="?android:attr/buttonBarStyle"
-        android:layout_below="@id/titleEditText" >
+        style="?android:attr/buttonBarStyle">
 
         <Button
             android:id="@+id/addCommentButton"
@@ -29,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             style="?android:attr/buttonBarButtonStyle"
-            android:text="@string/addComment" />
+            android:text="@string/add_comment" />
 
 	    <Button
 	        android:id="@+id/checkCommentButton"
@@ -37,91 +63,24 @@
 	        android:layout_height="wrap_content"
             android:layout_weight="1"
             style="?android:attr/buttonBarButtonStyle"
-	        android:text="@string/checkComment" />
+	        android:text="@string/check_comment" />
         
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/managerLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/commentLayout"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/managerTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <Button
-            android:id="@+id/managerButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/chooseManager" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ccLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/managerLayout"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/ccTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <Button
-            android:id="@+id/ccButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/chooseCC" />
     </LinearLayout>
 
     <ListView
-        android:id="@+id/itemListView"
+        android:id="@+id/detailListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/buttonLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/ccLayout" >
-    </ListView>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@color/background" />
 
-    <Button
-        android:id="@+id/addButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp"
-        android:background="@drawable/add_button" />
-
-    <LinearLayout
-        android:id="@+id/buttonLayout"
+    <TextView
+        android:id="@+id/textView1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="?android:attr/buttonBarStyle"
-        android:layout_alignParentBottom="true" >
+        android:layout_height="54dp"
+        android:gravity="center"
+        android:background="@drawable/text_drawable"
+        android:text="@string/submit"
+        android:textColor="@color/start_button_text_color" />
 
-        <Button
-            android:id="@+id/cancelButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="?android:attr/buttonBarButtonStyle"
-            android:text="@string/cancel" />
-
-        <Button
-            android:id="@+id/saveButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="?android:attr/buttonBarButtonStyle"
-            android:text="@string/save" />
-        
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
