--- a/res/layout/report_export_dialog.xml
+++ b/res/layout/report_export_dialog.xml
@@ -12,6 +12,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:inputType="textEmailAddress"
-        android:hint="@string/inputEmail" />
+        android:hint="@string/input_email" />
 
 </RelativeLayout>
