--- a/res/layout/start_register_by_phone.xml
+++ b/res/layout/start_register_by_phone.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:hint="@string/inputPhone"
+        android:hint="@string/input_phone"
         android:inputType="text|phone"
         android:focusable="true" 
         android:focusableInTouchMode="true" />
@@ -26,7 +26,7 @@
         android:layout_alignRight="@+id/mobileEditText"
         android:layout_below="@+id/mobileEditText"
         android:layout_marginTop="40dp"
-        android:hint="@string/inputPassword"
+        android:hint="@string/input_password"
         android:inputType="textPassword" />
 
     <Button
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/codeEditText"
         android:layout_alignRight="@+id/mobilePasswordEditText"
-        android:text="@string/acquireCode" />
+        android:text="@string/acquire_code" />
 
     <EditText
         android:id="@+id/codeEditText"
@@ -45,7 +45,7 @@
         android:layout_below="@+id/mobilePasswordEditText"
         android:layout_marginTop="52dp"
         android:layout_toLeftOf="@+id/acquireCodeButton"
-        android:hint="@string/inputCode"
+        android:hint="@string/input_code"
         android:inputType="textEmailAddress" />
 
     <Button
