--- a/res/layout/list_report_item_edit.xml
+++ b/res/layout/list_report_item_edit.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="75dp"
     android:orientation="horizontal"
@@ -7,10 +7,10 @@
 
     <TextView
         android:id="@+id/amountTextView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:layout_marginLeft="16dp"
-        android:layout_toLeftOf="@+id/warningImageView"
         android:gravity="center_vertical"
         android:textColor="@color/font_major_dark"
         android:textSize="22sp" />
@@ -19,16 +19,16 @@
         android:id="@+id/warningImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+		android:layout_gravity="center"
 		android:contentDescription="@string/warning"
         android:src="@drawable/warning"
         android:visibility="invisible" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:orientation="vertical"
-        android:layout_toRightOf="@+id/warningImageView"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp" >
 
@@ -58,6 +58,7 @@
                 android:contentDescription="@string/tag"
                 android:src="@drawable/default_icon" />
         </LinearLayout>
+        
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
