--- a/res/layout/report_approve.xml
+++ b/res/layout/report_approve.xml
@@ -46,6 +46,11 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/background" />
+            
+	<include                 
+		android:layout_width="match_parent"
+		android:layout_height="0.5dp"
+		layout="@layout/divider" />
 
     <LinearLayout
         android:layout_width="match_parent"
