--- a/res/layout/report_edit.xml
+++ b/res/layout/report_edit.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-	android:focusable="true"
-	android:focusableInTouchMode="true" >
+    android:id="@+id/containerLayout" >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,7 +21,6 @@
             android:src="@drawable/back" />
 
         <TextView
-            android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -67,15 +65,232 @@
         
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/detailListView"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@color/background" />
+        android:background="@color/background" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+            
+	        <LinearLayout
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:orientation="vertical"
+			    android:clickable="false"
+			    android:background="@color/major_light" >
+			
+			    <RelativeLayout
+			        android:layout_width="match_parent"
+			        android:layout_height="wrap_content"
+			        android:layout_marginTop="40dp"
+			        android:layout_marginLeft="16dp"
+			        android:layout_marginRight="16dp"
+			    	android:focusable="true"
+			   		android:focusableInTouchMode="true" >
+			
+			        <EditText
+			            android:id="@+id/titleEditText"
+			            android:layout_width="match_parent"
+			            android:layout_height="wrap_content"
+						android:layout_centerVertical="true"
+						android:layout_toLeftOf="@+id/statusImageView"
+						android:layout_marginRight="14dp"
+			            android:background="@null"
+			            android:hint="@string/input_report_title"
+			            android:textColor="@color/font_major_dark"
+			            android:textSize="20sp" />
+			
+			        <ImageView
+			            android:id="@+id/statusImageView"
+			            android:layout_width="wrap_content"
+			            android:layout_height="wrap_content"
+						android:layout_centerVertical="true"
+						android:layout_alignParentRight="true"
+			            android:contentDescription="@string/status"
+			            android:src="@drawable/report_status_approved" />
+			
+			    </RelativeLayout>
+			
+			    <TextView
+			        android:id="@+id/timeTextView"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+					android:layout_marginLeft="16dp"
+			        android:layout_marginTop="22dp"
+			        android:layout_marginBottom="22dp"
+			        android:textColor="@color/hint_grey"
+			        android:textSize="14sp" />
+			
+			</LinearLayout>
+            
+			<include                 
+				android:layout_width="match_parent"
+				android:layout_height="0.5dp"
+			  	layout="@layout/divider" />
+	
+	        <LinearLayout
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:orientation="horizontal"
+	            android:background="@color/major_light" >
+
+	            <TextView
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_marginTop="22dp"
+	                android:layout_marginLeft="16dp"
+	                android:text="@string/submit_to"
+	                android:textColor="@color/hint_grey"
+	                android:textSize="14sp" />
+
+	            <TextView
+	                android:id="@+id/managerTextView"
+	                android:layout_width="match_parent"
+	                android:layout_height="wrap_content"
+	                android:layout_marginTop="22dp"
+	                android:layout_marginBottom="22dp"
+	                android:layout_marginLeft="22dp"
+	                android:layout_marginRight="16dp"
+	                android:textColor="@color/font_major_dark"
+	                android:textSize="16sp" />
+	
+	        </LinearLayout>
+            
+		    <include                 
+				android:layout_width="match_parent"
+				android:layout_height="0.5dp"
+				android:layout_marginLeft="82dp"
+			  	layout="@layout/divider"/>
+	
+	        <LinearLayout
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:orientation="horizontal"
+	            android:background="@color/major_light" >
+
+	            <TextView
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_marginTop="22dp"
+	                android:layout_marginLeft="16dp"
+	                android:text="@string/cc"
+	                android:textColor="@color/hint_grey"
+	                android:textSize="14sp" />
+
+	            <TextView
+	                android:id="@+id/ccTextView"
+	                android:layout_width="match_parent"
+	                android:layout_height="wrap_content"
+	                android:layout_marginTop="22dp"
+	                android:layout_marginBottom="22dp"
+	                android:layout_marginLeft="22dp"
+	                android:layout_marginRight="16dp"
+	                android:textColor="@color/font_major_dark"
+	                android:textSize="16sp" />
+	
+	        </LinearLayout>
+            
+			<include                 
+				android:layout_width="match_parent"
+				android:layout_height="0.5dp"
+			  	layout="@layout/divider" />
+			
+			<LinearLayout
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:orientation="horizontal"
+			    android:clickable="false"
+			    android:background="@color/major_light" >
+			
+			    <TextView
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:layout_marginTop="22dp"
+			        android:layout_marginBottom="22dp"
+			        android:layout_marginLeft="16dp"
+			        android:text="@string/total_amount"
+			        android:textColor="@color/hint_grey"
+			        android:textSize="14sp" />
+			
+			    <LinearLayout
+			        android:layout_width="0dp"
+			        android:layout_height="wrap_content"
+			        android:layout_weight="1"
+			        android:layout_gravity="center_vertical"
+			        android:gravity="bottom"
+			        android:layout_marginLeft="14dp" >
+			
+			        <TextView
+			            android:id="@+id/amountTextView"
+			            android:layout_width="wrap_content"
+			            android:layout_height="wrap_content"
+			            android:layout_marginTop="4dp"
+			            android:ellipsize="end"
+			            android:singleLine="true"
+			            android:textColor="@color/font_reim_number"
+			            android:textSize="24sp" />
+			
+			        <TextView
+			            android:id="@+id/signTextView"
+			            android:layout_width="wrap_content"
+			            android:layout_height="wrap_content"
+			            android:layout_marginLeft="3dp"
+			            android:text="@string/rmb"
+			            android:textColor="@color/hint_black"
+			            android:textSize="16sp" />
+			
+			    </LinearLayout>
+			
+			    <TextView
+			        android:id="@+id/itemCountTextView"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:layout_marginTop="22dp"
+			        android:layout_marginBottom="22dp"
+			        android:layout_marginLeft="14dp"
+			        android:layout_marginRight="10dp"
+			        android:text="@string/item_count"
+			        android:textColor="@color/hint_grey"
+			        android:textSize="14sp" />
+			
+			    <ImageView
+			        android:id="@+id/addImageView"
+			        android:layout_width="36dp"
+			        android:layout_height="36dp"
+			        android:layout_gravity="center_vertical"
+			        android:layout_marginRight="16dp"
+			        android:contentDescription="@string/add"
+			        android:src="@drawable/add_tag_button" />
+			
+			</LinearLayout>
+            
+			<include                 
+				android:layout_width="match_parent"
+				android:layout_height="0.5dp"
+			  	layout="@layout/divider" />
+
+			<LinearLayout
+        		android:id="@+id/itemLayout"
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:orientation="vertical" >
+			</LinearLayout>
+				    
+        </LinearLayout>
+        
+    </ScrollView>
+            
+	<include                 
+		android:layout_width="match_parent"
+		android:layout_height="0.5dp"
+		layout="@layout/divider" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/submitTextView"
         android:layout_width="match_parent"
         android:layout_height="54dp"
         android:gravity="center"
